--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,17 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 mc_version=1.18.2
 mod_version=3.2.3
-forge_version=40.2.14
+forge_version=40.2.21
+
+
+
+# Workaround for Spotless bug
+# https://github.com/diffplug/spotless/issues/834
+org.gradle.jvmargs=--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
